# Yanny

./: .env  .gitignore  README.md  pyproject.toml  raw_database_output_dump.txt  structure.txt
.github/workflows/: main.yaml
data/: sales.xlsx
dev api/: README.md  main.py  pyproject.toml
dev api/fake_api/: __init__.py  api.py  config.py  database.py  response.py
dev api/fake_api/resources/: __init__.py  alerts.py  applications.py  cases.py  customers.py
dev api/fake_api/utils/: auth.py  base_resource.py  delay.py  filters.py  pagination.py  rate_limiter.py
source/: API.csv  API.json  Invoice.py  OpenWeather.py  api-POST.py  check_connection.py  credit_scorecard.py  example.csv  example.json  file-csv.py  files-excel.py  files-json.py  files.py  functions.py  handoff_regular_expression.py  laboratory3-JSON-TO-CSV.py  list structures.py  load_variable.py  main.py  output.txt  python-recap.py  regular_expression.py  sample.txt  string_normalization_and _injection.py  task-week2.py
tests/: test_credit_scorecard.py
