[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

 
[project] 
name = "my-awesome-package" 
version = "0.1.0" 
description = "A short, punchy description of my project" 
readme = "README.md" 
requires-python = ">=3.8" 
license = { text = "MIT" } 
keywords = [
    "awesome",
    "utility",
    "tool"
    ] 
authors = [   
    { name = "Yanny Barahona", email = "yanny.barahonagomez@experian.com" } 
] 
classifiers = [
      "Programming Language :: Python :: 3",
      "License :: OSI Approved :: MIT License",
      "Operating System :: OS Independent", 
] 
dependencies = [     
      "requests>=2.28.0",
      "click>=8.0.0", 
]
[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.12.0",
]
 
[project.urls] 
Homepage = "https://github.com" 
Documentation = "https://github.com#readme" 
Repository = "https://github.com.git" 
Issues = "https://github.com/issues" 
 
[project. Scripts]
my-cli = "my_package.cli:main" 
 
[tool. Black] 
line-length = 88 
 
[tool.pytest.ini_options] 
minversion = "6.0" 
addopts = "-ra -q" 
pythonpath = ["."]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
only-include = ["source"]

[tool.hatch.build.targets.wheel.sources]
"source" = ""

